<?xml version="1.0"?>
<package format="2">
  <name>get_pcd_info</name>
  <version>0.0.0</version>
  <description>The get_pcd_info package</description>

  <maintainer email="mxwu@todo.todo">mxwu</maintainer>
  <license>ITRI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>jsoncpp</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>jsoncpp</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>jsoncpp</exec_depend>

</package>
