<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_downsample_xyz</name>
  <version>0.0.0</version>
  <description>The point_cloud_downsample package</description>

  <maintainer email="ctwu@itri.org.tw">Chunte Wu</maintainer>
  <license>ITRI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
